fixed skills alignment

--- a/styles/index.module.scss
+++ b/styles/index.module.scss
@@ -54,7 +54,10 @@ $primary-weight-bold: 650;
 .contentWrapper {  
   border-bottom: $primary-border;
   border-color: $primary-colour;
+  // margin: auto;
   padding: 5rem 6rem 0 6rem; 
+  display: grid;
+  grid-template-columns: auto;
 
   @media (max-width: 700px) {
     padding: 1rem;
@@ -66,7 +69,8 @@ $primary-weight-bold: 650;
   .certificationsWrapper,
   .projectsWrapper { 
     margin-bottom: 3rem;
-    display: inline-grid;      grid-template-columns: 7rem auto; 
+    display: inline-grid;      
+    grid-template-columns: 7rem auto; 
     
     @media (max-width: 700px) {
       margin-bottom: 1.5rem;
@@ -112,14 +116,14 @@ $primary-weight-bold: 650;
 
   .skillsWrapper {
     .content {
-      display: inline-grid;      grid-template-columns: auto auto auto auto;
+      display: inline-grid;      
+      grid-template-columns: auto auto auto auto;
 
       @media (max-width: 700px) {
         grid-template-columns: auto auto;
       }
 
       .contentList {
-        min-width: 10rem;
         h1 {
           text-transform: capitalize;
           font-weight: $primary-weight-bold;
@@ -229,9 +233,6 @@ $primary-weight-bold: 650;
 
       .imageContainer {
         border-bottom: $primary-border $accent-colour;
-      }
-      .description {
-        padding: 0.5rem;
       }
     }
   }
